# reresvg

./: .gitignore  Cargo.toml  LICENSE  README.md  dashboard-logic.mjs
.github/workflows/: bench.yml  deploy-dashboard.yml
benchmark-dashboard/: README.md  index.html  test_dashboard.mjs
crates/resvg/: Cargo.toml
crates/resvg/examples/: animation.rs  custom_href_resolver.rs  draw_bboxes.rs  minimal.rs
crates/resvg/src/: animation.rs  lib.rs  main.rs
crates/resvg/tests/integration/: main.rs
crates/usvg/: Cargo.toml  README.md
crates/usvg/benches/: README.md  generators.rs  iai_to_benchmark_json.py  parsing.rs  parsing_iai.rs  test_iai_converter.py
crates/usvg/benches/testdata/iai_summary/parsing_iai/parsing/per_element_kind.rect/: summary.json
crates/usvg/benches/testdata/iai_summary/parsing_iai/parsing/scaled.flat/: summary.json
crates/usvg/codegen/: attributes.txt  elements.txt  main.rs
crates/usvg/src/: main.rs
crates/usvg/src/parser/: mod.rs  options.rs
crates/usvg/src/parser/animation/: animated_svg.rs  bake.rs  element.rs  interpolate.rs  mod.rs  motion.rs  timing.rs
crates/usvg/src/parser/svgtree/: mod.rs  names.rs  parse.rs
crates/usvg/tests/: bench_generators.rs
dev/bench/: data.js
docs/superpowers/plans/: 2026-05-30-svg-animation.md
docs/superpowers/specs/: 2026-05-29-svg-animation-design.md
examples/bevy-icon-demo/: Cargo.toml  README.md
examples/bevy-icon-demo/src/: app.rs  bake.rs  config.rs  grid.rs  icons.rs  lib.rs  main.rs  systems.rs
examples/bevy-icon-demo/tests/: bake_all_icons.rs
