[workspace]
members = [
    "crates/resvg",
    "crates/usvg",
    "crates/usvg/codegen",
]
default-members = ["crates/resvg"]
resolver = "2"

[workspace.package]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/ArmandBurger/reresvg"
authors    = ["Armand Burger"]

[workspace.dependencies]
# Internal crates
usvg = { path = "crates/usvg", version = "0.47.0", default-features = false }

# Rendering & geometry
tiny-skia      = "0.12.0"
tiny-skia-path = "0.12.0"
kurbo          = "0.13.0"
strict-num     = "0.1.1"
rgb            = "0.8"

# SVG, XML & CSS parsing
svgtypes  = "0.16.1"
roxmltree = "0.21.1"
simplecss = "0.2"
xmlwriter = "0.1"
data-url  = "0.3"

# Raster image decoding
gif        = "0.14.1"
image-webp = "0.2.4"
zune-jpeg  = "0.5.8"
imagesize  = "0.14.0"
base64     = "0.22"

# Compression
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }

# Text shaping & font handling
fontdb         = { version = "0.23.0", default-features = false }
rustybuzz      = "0.20.1"
ttf-parser     = { version = "0.25.1", features = ["gvar-alloc"] }
unicode-bidi   = "0.3"
unicode-script = "0.5"
unicode-vo     = "0.1"

# Hashing
siphasher = "1.0"

# Logging & CLI
log       = "0.4"
pico-args = { version = "0.5", features = ["eq-separator"] }

# Dev / testing
once_cell = "1.21"
png       = "0.18.0"
