[package]
name        = "reresvg"
version     = "0.47.0"
description = "An SVG rendering library."
keywords    = ["svg", "render", "raster"]
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
exclude   = ["tests"]
workspace = "../.."

[[bin]]
name = "reresvg"
required-features = ["text", "system-fonts", "memmap-fonts"]

[dependencies]
usvg      = { workspace = true }
tiny-skia = { workspace = true }
rgb       = { workspace = true }
svgtypes  = { workspace = true }
log       = { workspace = true }
pico-args = { workspace = true }

# Raster image decoding (optional)
gif        = { workspace = true, optional = true }
image-webp = { workspace = true, optional = true }
zune-jpeg  = { workspace = true, optional = true }

[dev-dependencies]
once_cell = { workspace = true }
png       = { workspace = true }

[features]
default = ["text", "system-fonts", "memmap-fonts", "raster-images"]
# Enables SVG Text support.
# Adds around 400KiB to your binary.
text = ["usvg/text"]
# Enables system fonts loading (only for `text`).
system-fonts = ["usvg/system-fonts"]
# Enables font files memmaping for faster loading (only for `text`).
memmap-fonts = ["usvg/memmap-fonts"]
# Enables decoding and rendering of raster images.
# When disabled, `image` elements with SVG data will still be rendered.
# Adds around 200KiB to your binary.
raster-images = ["gif", "image-webp", "dep:zune-jpeg"]
