[package]
name          = "usvg"
version       = "0.47.0"
description   = "An SVG simplification library."
keywords      = ["svg"]
categories    = ["multimedia::images"]
documentation = "https://docs.rs/usvg/"
readme        = "README.md"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
exclude   = ["tests"]
workspace = "../.."

[[bin]]
name = "usvg"
required-features = ["text", "system-fonts", "memmap-fonts"]

[dependencies]
tiny-skia-path = { workspace = true }
strict-num     = { workspace = true }
kurbo          = { workspace = true }
svgtypes       = { workspace = true }
roxmltree      = { workspace = true }
simplecss      = { workspace = true }
xmlwriter      = { workspace = true }
siphasher      = { workspace = true }
log            = { workspace = true }
pico-args      = { workspace = true }

# Embedded raster images
base64    = { workspace = true }
imagesize = { workspace = true }
data-url  = { workspace = true }

# SVGZ decoding
flate2 = { workspace = true }

# Text shaping & fonts (optional)
fontdb         = { workspace = true, optional = true }
rustybuzz      = { workspace = true, optional = true }
# ttf-parser is re-exported from rustybuzz, but we need gvar-alloc for variable
# fonts with many variation axes (like Roboto Flex, which has 13 axes).
ttf-parser     = { workspace = true, optional = true }
unicode-bidi   = { workspace = true, optional = true }
unicode-script = { workspace = true, optional = true }
unicode-vo     = { workspace = true, optional = true }

[dev-dependencies]
once_cell     = { workspace = true }
criterion     = { workspace = true }
iai-callgrind = { workspace = true }

[features]
default = ["text", "system-fonts", "memmap-fonts"]
# Enables text-to-path conversion support.
# Adds around 400KiB to your binary.
text = ["fontdb", "rustybuzz", "ttf-parser", "unicode-bidi", "unicode-script", "unicode-vo"]
# Enables system fonts loading.
system-fonts = ["fontdb/fs", "fontdb/fontconfig"]
# Enables font files memmaping for faster loading.
memmap-fonts = ["fontdb/memmap"]

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "parsing_iai"
harness = false
