[package]
name = "bevy-icon-demo"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0 OR MIT"

# Empty workspace table detaches this crate from the parent resvg workspace,
# so Bevy never enters the resvg/usvg lockfile or CI.
[workspace]

[dependencies]
resvg = { path = "../../crates/resvg", default-features = false }
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "x11",
    "wayland",
] }

